@@ -3,6 +3,9 @@ This file documents the revision history for the SNClient+ agent.
 next:
          - add alpine support
          - fix check_process when empty-state is set to OK
+         - change like operator to be case insensitive
+         - add new slike operator which is case sensitive
+         - add support for str() operator
 
 0.31     Wed Feb 12 18:14:54 CET 2025
          - fix check_files thresholds on total_size
